--- a/API/package.json
+++ b/API/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "mongoose": "^5.4.19",
+    "mongoose": "^5.4.20",
+    "mysql": "^2.16.0",
     "path": "^0.12.7",
     "prompt": "^1.0.0",
     "yargs": "^13.2.2"
