--- a/API/package.json
+++ b/API/package.json
@@ -21,6 +21,7 @@
     "express": "^4.16.4",
     "mongoose": "^5.4.20",
     "mysql": "^2.16.0",
+    "mysql-model": "0.0.3",
     "path": "^0.12.7",
     "prompt": "^1.0.0",
     "yargs": "^13.2.2"
