--- a/API/package.json
+++ b/API/package.json
@@ -1,29 +1,19 @@
 {
-  "name": "nodejs_project",
+  "name": "testapi",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/MathisLeRoyNivot/NodeJS_Project.git"
-  },
-  "author": "Mathis Le Roy-Nivot | Mattéo Lecuit | Henry Maisonneuve",
+  "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/MathisLeRoyNivot/NodeJS_Project/issues"
-  },
-  "homepage": "https://github.com/MathisLeRoyNivot/NodeJS_Project#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "mongoose": "^5.4.20",
-    "mysql": "^2.16.0",
-    "mysql-model": "0.0.3",
-    "path": "^0.12.7",
-    "prompt": "^1.0.0",
-    "yargs": "^13.2.2"
+    "mysql": "^2.16.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.10"
   }
 }
