POST method for providers half done, missing nodejs recovering data part

--- a/API/package.json
+++ b/API/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "testapi",
+  "name": "api-viabrico",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "LE ROY-NIVOT Mathis, MAISONNEUVE Henry, POTIER Tanguy, VAUCARD Adrien",
   "license": "ISC",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
