--- a/APP/app/src/main/AndroidManifest.xml
+++ b/APP/app/src/main/AndroidManifest.xml
@@ -13,9 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AddFournisseurActivity"></activity>
-        <activity android:name=".ConnectionActivity"></activity>
-        <activity android:name=".ListActivity">
+        <activity android:name=".AddProviderActivity"></activity>
+        <activity android:name=".ListActivity"></activity>
+        <activity android:name=".ConnectionActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
