--- a/API/package.json
+++ b/API/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "crypto-js": "^3.1.9-1",
     "express": "^4.16.4",
     "mysql": "^2.16.0",
     "socket.io": "^2.2.0"
